--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-      
+    "body-parser": "^1.14.1",
+    "ejs": "^2.3.4",
+    "emailjs": "^1.0.0",
+    "express": "^4.13.3",
+    "mysql": "^2.9.0",
+    "sleep":"latest",
+    "request":"latest",
+    "sequence":"^3.0.0"
   }
 }
