Acomodo de código
Agregado de variables globales:
--> GLOBAL_modificoperfil
--> GLOBAL_usr_habitacion
--> GLOBAL_usr_pass

Reducción de cantidad de consultas a la base de datos.

Bugs:
--> net.js (no identificado)
--> spotify se traba si se cambia muchas canciones

Detalles:
--> hacer una función de reset (si hay alguien adentro, borrar la
auditoria o tomar otra decisión)
--> hacer que aparezca el usuario actual arriba de todo en la pagina de
información del administrador
del administrador.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql": "^2.9.0",
     "sleep":"latest",
     "request":"latest",
-    "sequence":"^3.0.0"
+    "sequence":"^3.0.0",
+    "jsupm_grove":"latest"
   }
 }
